syntax = "proto3";

package pb;
option go_package = "/pb";

// Register
message RegisterRequest {
  string username = 1;
  string password = 2;
}

message RegisterResponse {
  int64 status = 1;
  string error = 2;
}