syntax = "proto3";

package pb;
option go_package = "/pb";

// Validate
message ValidateRequest { 
  string token = 1; 
}

message ValidateResponse {
  int64 status = 1;
  string error = 2;
  int64 userId = 3;
}